# haskell-monomer-test

./: .gitignore  CHANGELOG.md  Info.plist  README.md  cabal.project  haskell-monomer-test.cabal
app/: Main.hs
